# pgmenu

./: DOCUMENTATION.md  Demo.py  GlobalFunctions.py  README.md  button.py  checkbox.py  frame.py  image.py  menu.py  pgmenu.py  setup.cfg  testing.py  text.py  textbox.py  theme.py
examples/: frameDemo.py  loginDemo - Prettier.py  loginDemo.py  widgetDemo.py
pgmenu/: DebugWindow.py  aarect.py  animate.py  button.py  draw.py  main.py  pgmenu.py  testing.py  text.py  vars.py  widget.py
src/pgmenu/: README.md  __init__.py  button.py  checkbox.py  frame.py  image.py  main.py  menu.py  pgmenu.py  text.py  textbox.py  theme.py
src/pgmenu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pgmenu/examples/: frameDemo.py  loginDemo.py  widgetDemo.py
