[metadata]
name = pgmenu
version = 1.5
author = Vermylion
author_email = vermylioncode@gmail.com
description = A pygame menu library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vermylion/pgmenu
project_urls =
    Bug Tracker = https://github.com/Vermylion/pgmenu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src